[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/ui/station_menu/trade_interface.gd" type="Script" id=1]

[node name="TradeInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0

[node name="LabelTitle" type="Label" parent="Panel"]
anchor_right = 1.0
margin_bottom = 30.0
text = "MARKET"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 40.0
margin_right = -20.0
margin_bottom = -60.0
custom_constants/separation = 20

[node name="VBoxStation" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_right = 270.0
margin_bottom = 300.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxStation"]
margin_right = 270.0
margin_bottom = 14.0
text = "Station Inventory"
align = 1

[node name="ItemListStation" type="ItemList" parent="Panel/HBoxContainer/VBoxStation"]
margin_top = 18.0
margin_right = 270.0
margin_bottom = 300.0
size_flags_vertical = 3

[node name="VBoxPlayer" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_left = 290.0
margin_right = 560.0
margin_bottom = 300.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxPlayer"]
margin_right = 270.0
margin_bottom = 14.0
text = "Ship Cargo"
align = 1

[node name="ItemListPlayer" type="ItemList" parent="Panel/HBoxContainer/VBoxPlayer"]
margin_top = 18.0
margin_right = 270.0
margin_bottom = 300.0
size_flags_vertical = 3

[node name="HBoxControls" type="HBoxContainer" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -50.0
margin_right = -20.0
margin_bottom = -10.0
custom_constants/separation = 20
alignment = 1

[node name="BtnBuy" type="Button" parent="Panel/HBoxControls"]
margin_left = 155.0
margin_right = 235.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 0 )
text = "BUY"

[node name="BtnSell" type="Button" parent="Panel/HBoxControls"]
margin_left = 255.0
margin_right = 335.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 0 )
text = "SELL"

[node name="BtnClose" type="Button" parent="Panel/HBoxControls"]
margin_left = 355.0
margin_right = 405.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 0 )
text = "Close"
